Style update of index HTML page.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
 <head>
 <title>Kin Ben Cheung</title>
+<style>
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+body{
+  font-family:"Roboto";
+  font-size:2em;
+  color:#eee;
+  background:#333;
+}
+</style>
 </head>
 <body>
 Kin Ben Cheung
