--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@ body{
   font-size:2em;
   color:#eee;
   background:#333;
+  text-align:center;
+}
+h1{
+  margin-top:8em;
 }
 </style>
 </head>
 <body>
-Kin Ben Cheung
+  <h1>Kin Ben Cheung</h1>
 </body>
 </html>
