--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta http-equiv="refresh" content="0;URL='https://kinbencheung.myportfolio.com/'" />    
 <title>Kin Ben Cheung</title>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Roboto');
